# ChangeLog for games-kids/gmult
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-kids/gmult/ChangeLog,v 1.11 2008/11/19 04:31:38 mr_bones_ Exp $

  19 Nov 2008; Michael Sterrett <mr_bones_@gentoo.org> gmult-5.3.ebuild:
  remove -pedantic (bug #247375)

  02 May 2008; Tristan Heaven <nyhm@gentoo.org>
  +files/gmult-5.3-gcc43.patch, gmult-5.3.ebuild:
  Fix building with gcc-4.3

*gmult-5.3 (07 Feb 2007)

  07 Feb 2007; Tristan Heaven <nyhm@gentoo.org> +gmult-5.3.ebuild:
  Version bump

*gmult-5.2 (02 Feb 2006)

  02 Feb 2006; Michael Sterrett <mr_bones_@gentoo.org> +gmult-5.2.ebuild:
  version bump

  20 Jul 2005; David Holm <dholm@gentoo.org> gmult-5.1.ebuild:
  Added to ~ppc.

*gmult-5.1 (20 Jul 2005)

  20 Jul 2005; Michael Sterrett <mr_bones_@gentoo.org> +gmult-5.1.ebuild:
  version bump

  26 May 2005; Michael Sterrett <mr_bones_@gentoo.org> -gmult-2.1.ebuild,
  -gmult-3.0.ebuild:
  clean old ebuilds

*gmult-4.2 (26 May 2005)

  26 May 2005; Michael Sterrett <mr_bones_@gentoo.org> +gmult-4.2.ebuild:
  version bump

*gmult-3.0 (31 Oct 2004)

  31 Oct 2004; Tony Vroon <chainsaw@gentoo.org> +gmult-3.0.ebuild:
  Version bump as requested by Daniel Karlsson in bug #69603.

*gmult-2.1 (27 May 2004)

  27 May 2004; Michael Sterrett <mr_bones_@gentoo.org> gmult-2.1.ebuild,
  metadata.xml:
  Initial commit - ebuild by Mikel Olasagasti via bug #51390 (modified)
