@@ -2,6 +2,6 @@ AUX gmult-5.3-gcc43.patch 763 RMD160 34130ab704ec58fefb24a0492401a40a08d34e43 SH
 DIST gmult-4.2.tar.bz2 154052 RMD160 bda7436dc0524dc800f30ff60d0dc004e5137deb SHA1 53584effad58b5e43a34b7c37e8524dea2d83a7f SHA256 8d29e958229d8770b49c5176a49681b81bfc01d699fc2a6b2263711149aeb1ed
 DIST gmult-5.3.tar.bz2 142440 RMD160 bb2523698c4b07ae98caf659a853bd151df570d8 SHA1 c3d109fd9fe891f736c47cc938a85e5f8af42a53 SHA256 dc983113c27ebf29fccec8330f15d6d3d9786eb5f4d68706fc94832ca5331f5a
 EBUILD gmult-4.2.ebuild 522 RMD160 8e9707b7806b0cf0a48edc9d5aa9f4e7a5b467e3 SHA1 366f1a9e33d063efc976f48935ee567a076db2d2 SHA256 695c60f43f3e043f952add2e49761200ac797508c62a11251a0dac36cd41d8b1
-EBUILD gmult-5.3.ebuild 1161 RMD160 6c77bc8529b09209f19f8715542f1584deeec274 SHA1 a20c4e4d17182e54f0819a45ba441ab05a1612fa SHA256 3218374b0a0f3b7a17c56eb088d9b829695a16da564ef70a152e9cdb7a7ac5bd
-MISC ChangeLog 1441 RMD160 63d1d7976a3b7bce1b3ea19cd81cc39e3a4fbf71 SHA1 ec8d8afa6b05da9ccb41f793b5b090a374e7c172 SHA256 646fafb73fe3a0905c899393075cda3872af7367b3ac768e7fcf58ba1b4a8f10
+EBUILD gmult-5.3.ebuild 1158 RMD160 33af247d2c5ac9bc252cf66dd9abe201eb7afadb SHA1 bc6ff8307aeabda145eb885528749fcca3c54e6e SHA256 185db1a8269c9e734acd61dbf48c934462088029587ec045c78dda54c3fe78d3
+MISC ChangeLog 1532 RMD160 0168b0b0b9c1ab83c61ab3dfddd4919c86d5f680 SHA1 40263fc91c9f03196786413f5f8fa608b6723c40 SHA256 7da9f3d4d456189614b4aebbdc9478cbcc700ce113869a6e40215bae749c30a6
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
