@@ -1,7 +1,7 @@
-MISC ChangeLog 1360 RMD160 43982489f2689c22f79d16f97e8d720287a6f3ad SHA1 fb8ccaea86054106a5759318d47a733c23bc7ff8 SHA256 67a65ef7d98c0b99e49d6eceda3e73e585515d3771ef4f5918385d663f2a2c1a
 AUX 2.5-gentoo-dirs.patch 2013 RMD160 5a76fd451790f772bd6ff9c8859f4ab90f9efca9 SHA1 dfb0717e6fcca0ce3a53ee7fea35f06a7bace2e4 SHA256 209c68607b5d2581e4be16ad14c39bfa1cd4fe358870980e1609f496a5731ac2
-MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
-EBUILD pytraffic-2.5.4.ebuild 1440 RMD160 7ef8299a4b9b5ea69dfb075e5450312c946d8f43 SHA1 f453a8ac427897ee7ef7c4d04c3d0a8f34149a4f SHA256 185999100e5a6506b3e44b147bcfdab89fd127bbce7986411ab7a73bf2fa6382
-EBUILD pytraffic-2.5.ebuild 886 RMD160 838d9743041ed57c377f9548f88eb920b982cd37 SHA1 b9cdc9c607774d5f1a180a6b0c1426e5d39f8e64 SHA256 a18912e32ef1f73c4709585705d3f209ea8a4f996b82d2a0498b8a6b5b587990
 DIST pytraffic-2.5.4.tar.gz 2474006 RMD160 3749068efff7f670463a75d1279bbd157ee63658 SHA1 08077ccf3803f6f4dbb5a7892ae23416f5097350 SHA256 7a3254f5a37d71104a1223d960ce8b5d23d40caa4b2b8b8b6236d6a762c00a2a
 DIST pytraffic-2.5.tar.gz 2196165 RMD160 07dfa09588a2cb5dd891f16aa07959ca9a1f47a2 SHA1 1e1a4ad193704233873c3293c052c5a1ba3b83fe SHA256 ce07df8a0878da3ee6b1da5760c701a9bfa7850b997276d8264a3db3ae9d7e72
+EBUILD pytraffic-2.5.4.ebuild 1435 RMD160 42731ea95fda57bb7e96110dcc35ed4be48d2789 SHA1 55c877f9369213efc9e401c99c217dcb2edcee62 SHA256 63052fd4d4a20d13e02f11a8ec58bbf18b2381b2b39795aa9aa3cae9ecb3e3cc
+EBUILD pytraffic-2.5.ebuild 886 RMD160 838d9743041ed57c377f9548f88eb920b982cd37 SHA1 b9cdc9c607774d5f1a180a6b0c1426e5d39f8e64 SHA256 a18912e32ef1f73c4709585705d3f209ea8a4f996b82d2a0498b8a6b5b587990
+MISC ChangeLog 1456 RMD160 8e95b2047cc5301c2361d1c40100208018ab5d3b SHA1 dc4943a723c429da2318d60ec7d16add33446b5a SHA256 0fffdc3ff7cd339f704f062c30790a1fb666d97ef277c934f6b96e9a2c5a19b3
+MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
